// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";



package ccsds_cs.protobuf;

message ServiceAddress {
extensions 8 to 108;

  optional ccsds_mal.protobuf.UINTEGER supportedCapabilities = 1;
  optional ccsds_mal.protobuf.UINTEGER supportedLevels = 2;
  optional ccsds_mal.protobuf.UINTEGER qoSproperties = 3;
  optional ccsds_mal.protobuf.UINTEGER priorityLevels = 4;
  optional ccsds_mal.protobuf.URI serviceURI = 5;
  optional ccsds_mal.protobuf.URI dataURI = 6;
  optional ccsds_mal.protobuf.STRING dataName = 7;
}
